More SMTP options in config

--- a/app/.env.example
+++ b/app/.env.example
@@ -11,3 +11,6 @@ DB_PASSWORD="password"
 SMTP_HOST="host.example.com"
 SMTP_USER="relay@example.com"
 SMTP_PASSWORD="password"
+SMTP_PORT="587"
+SMTP_AUTH="true"
+SMTP_SECURE="tls"
