--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,3 @@
-sudo: false
 dist: xenial
 language: php
 
@@ -6,7 +5,7 @@ services:
   - mysql
   - postgresql
   - memcached
-  - redis-server
+  - redis
 
 php:
   - 7.1
@@ -15,13 +14,13 @@ php:
   - 7.4
 
 env:
-  matrix:
+  jobs:
     - DB=mysql
     - DB=sqlite
     - DB=pgsql
     - DB=memory
 
-matrix:
+jobs:
   fast_finish: true
 
 cache:
