Revert "Dockerfile Changes to PHP 7.4"
This reverts commit 7d9b72c008f29f6478d88b0c721ce416f434e95b.

--- a/docker/app/Dockerfile
+++ b/docker/app/Dockerfile
@@ -1,4 +1,4 @@
-FROM php:7.4-fpm
+FROM php:7.2-fpm
 
 RUN apt-get update
 
@@ -16,10 +16,8 @@ RUN apt-get install -y \
     libxml2-dev \
     locales \
     zlib1g-dev \
-    libzip-dev\
     libpng-dev \
     libfreetype6-dev \
-    libjpeg62-turbo-dev \
     libjpeg-dev \
     zip \
     nodejs
@@ -29,7 +27,7 @@ RUN curl -sSfo /tmp/composer.phar https://getcomposer.org/installer
 RUN php /tmp/composer.phar --install-dir=/usr/local/bin --filename=composer
 
 # Install and configure PHP extensions
-RUN docker-php-ext-configure gd --with-freetype --with-jpeg \
+RUN docker-php-ext-configure gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/ \
     && docker-php-ext-install -j$(nproc) gd \
     && docker-php-ext-install -j$(nproc) pdo pdo_mysql \
     && docker-php-ext-install -j$(nproc) zip
