Move php-cs & phpunit to "dist"

--- a/.php_cs.dist
+++ b/.php_cs.dist
@@ -105,6 +105,7 @@ $rules = [
 $finder = PhpCsFixer\Finder::create()
     ->exclude([
       'vendor',
+      'assets',
     ])
     ->in([__DIR__ . '/app', __DIR__ . '/public']);
 
