--- a/.github/workflows/mysql.yml
+++ b/.github/workflows/mysql.yml
@@ -21,16 +21,16 @@ jobs:
       TEST_DB: default
       UF_MODE: debug
 
-    services:
-      redis:
-        image: redis
-        ports:
-          - 6379/tcp
-        options: --health-cmd="redis-cli ping" --health-interval=10s --health-timeout=5s --health-retries=3
+    # services:
+    #   redis:
+    #     image: redis
+    #     ports:
+    #       - 6379/tcp
+    #     options: --health-cmd="redis-cli ping" --health-interval=10s --health-timeout=5s --health-retries=3
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v1
+        uses: actions/checkout@v2
 
       - name: Setup PHP, with composer and extensions
         uses: shivammathur/setup-php@v2 #https://github.com/shivammathur/setup-php
