--- a/app/sprinkles/core/composer.json
+++ b/app/sprinkles/core/composer.json
@@ -45,7 +45,7 @@
         "twig/twig": "^2.11",
         "userfrosting/assets": "^6.0.0",
         "userfrosting/config": "~4.3.0",
-        "userfrosting/cache": "~4.3.0",
+        "userfrosting/cache": "~4.3.0 | ~4.4.0",
         "userfrosting/fortress": "~4.3.0",
         "userfrosting/i18n": "~4.3.0",
         "userfrosting/session": "~4.3.0",
