--- a/.travis.yml
+++ b/.travis.yml
@@ -28,6 +28,8 @@ cache:
     - $HOME/.composer/cache
 
 before_install:
+  # Force use of Composer 1.x
+  - composer self-update --1
   # copy sprinkles.json
   - cp app/sprinkles.example.json app/sprinkles.json
   # set up db
