Testing composer-merge-plugin fix

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,9 @@ php:
 env:
   jobs:
     - DB=mysql
+      COMPOSER=1
+    - DB=mysql
+      COMPOSER=2
     - DB=sqlite
     - DB=pgsql
     - DB=memory
@@ -28,8 +31,8 @@ cache:
     - $HOME/.composer/cache
 
 before_install:
-  # Force use of Composer 1.x
-  - composer self-update --1
+  # Force use of Composer 2.x
+  - composer self-update --$COMPOSER
   # copy sprinkles.json
   - cp app/sprinkles.example.json app/sprinkles.json
   # set up db
