--- a/composer.json
+++ b/composer.json
@@ -23,13 +23,19 @@
     "config": {
         "vendor-dir": "app/vendor"
     },
+    "repositories": [
+        {
+            "type":"vcs", 
+            "url":"https://github.com/mcaskill/composer-merge-plugin"
+        }
+    ],
     "require": {
         "php": ">=7.1",
         "ext-gd": "*",
         "composer/installers": "^1.4.0",
         "userfrosting/uniformresourcelocator": "~4.4.0",
         "symfony/console": "^4.3",
-        "wikimedia/composer-merge-plugin": "^1.4.0"
+        "wikimedia/composer-merge-plugin": "dev-feature/composer-v2 as 1.5.0"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.13",
