--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -2,9 +2,9 @@ name: Build
 
 on:
   push:
-    branches: [*]
+    branches: ['*']
   pull_request:
-    branches: [*]
+    branches: ['*']
   schedule:
   - cron: "0 0 * * 5"
 
