--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -44,6 +44,7 @@ jobs:
         redis-version: 6
     
     - name: Setup Memcached
+      if: ${{ matrix.os == 'ubuntu-latest' }}
       uses: niden/actions-memcached@v7
 
     - uses: actions/setup-node@v2
