--- a/.github/workflows/mysql.yml
+++ b/.github/workflows/mysql.yml
@@ -38,7 +38,7 @@ jobs:
           php-version: ${{ matrix.php-versions }}
           extensions: mbstring, dom, fileinfo, gd
           coverage: xdebug #optional
-          tools: pecl
+          tools: pecl, composer:v1
 
       - name: Shutdown Ubuntu MySQL (SUDO)
         run: sudo service mysql stop # Shutdown the Default MySQL, "sudo" is necessary, please not remove it
