--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -75,14 +75,14 @@ jobs:
         mkdir -p database
         touch database/database.sqlite
     
-    - name: Execute tests (Unit and Feature tests) via PHPUnit & MySQL Env
+    - name: Execute build with MySQL Env
       if: ${{ matrix.database == 'mysql' }}
       env:
         DB_CONNECTION: mysql
         DB_HOST: 127.0.0.1
         DB_USER: userfrosting
         DB_PASSWORD: password
-        DB_DATABASE: userfrosting
+        DB_NAME: userfrosting
         DB_PORT: 3306
       run: |
         php bakery debug
@@ -90,11 +90,11 @@ jobs:
         php bakery migrate
         php bakery test -c --coverage-format=clover
     
-    - name: Execute tests (Unit and Feature tests) via PHPUnit & SQLite Env
+    - name: Execute build with SQLite Env
       if: ${{ matrix.database == 'sqlite' }}
       env:
         DB_CONNECTION: sqlite
-        DB_DATABASE: database/database.sqlite
+        DB_NAME: database/database.sqlite
       run: |
         php bakery debug
         php bakery build-assets
