--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -55,10 +55,20 @@ jobs:
       if: ${{ matrix.database == 'mysql' }}
       run: sudo service mysql stop # Shutdown the Default MySQL, "sudo" is necessary, please not remove it
     
-    - name: Set up MySQL
-      if: ${{ matrix.database == 'mysql' }}
+    - name: Set up MySQL (PHP <= 7.3 -> MySQL 5)
+      if: ${{ matrix.database == 'mysql' && matrix.php_versions != 7.4 }}
       uses: mirromutth/mysql-action@v1.1
       with:
+        mysql version: '5'
+        mysql database: 'userfrosting'
+        mysql user: 'userfrosting'
+        mysql password: 'password'
+
+    - name: Set up MySQL (PHP >= 7.4 -> MySQL 8)
+      if: ${{ matrix.database == 'mysql' && matrix.php_versions == 7.4 }}
+      uses: mirromutth/mysql-action@v1.1
+      with:
+        mysql version: '8'
         mysql database: 'userfrosting'
         mysql user: 'userfrosting'
         mysql password: 'password'
