--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -9,7 +9,7 @@ on:
   - cron: "0 0 * * 5"
 
 jobs:
-  PHPUnit-ubuntu-MySQL:
+  PHPUnit-MySQL:
 
     strategy:
       fail-fast: false
@@ -97,15 +97,83 @@ jobs:
         file: ./_meta/coverage/coverage.xml
         fail_ci_if_error: true
 
-PHPUnit-ubuntu-SQLite:
+  PHPUnit-SQLite:
+
+      strategy:
+        fail-fast: false
+        matrix:
+          php_versions: ['7.1', '7.2', '7.3', '7.4']
+
+      runs-on: ubuntu-latest
+      name: PHPUnit - PHP ${{ matrix.php_versions }} - SQLite
+
+      env:
+        TEST_DB: default
+        UF_MODE: debug
+        DB_DRIVER: sqlite
+        DB_NAME: database/database.sqlite
+
+      steps:
+      - uses: actions/checkout@v2
+      
+      - name: Setup PHP, with composer and extensions
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: ${{ matrix.php_versions }}
+          extensions: mbstring, dom, fileinfo, gd, memcached, redis
+          coverage: xdebug
+          tools: pecl, composer:v1
+
+      - uses: actions/setup-node@v2
+        with:
+          node-version: 10
+      
+      - name: Setup Redis-server
+        uses: supercharge/redis-github-action@1.1.0
+        with:
+          redis-version: 6
+      
+      - name: Setup Memcached
+        uses: niden/actions-memcached@v7
+      
+      - name: Copy .env
+        run: php -r "copy('app/sprinkles.example.json', 'app/sprinkles.json');"
+      
+      - name: Install Dependencies
+        run: composer install --prefer-dist --no-progress --no-suggest
+      
+      - name: Create SQLite Database
+        run: |
+          mkdir -p database
+          touch database/database.sqlite
+      
+      - name: Bakery Debug
+        run: php bakery debug
+
+      - name: Migrate DB
+        run: php bakery migrate
+
+      # - name: Build Assets
+      #  run: php bakery build-assets
+
+      - name: Execute tests
+        run: php bakery test -c --coverage-format=clover
+      
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v1
+        with:
+          file: ./_meta/coverage/coverage.xml
+          fail_ci_if_error: true
+
+  PHPUnit-Windows:
 
     strategy:
       fail-fast: false
       matrix:
         php_versions: ['7.1', '7.2', '7.3', '7.4']
 
-    runs-on: ubuntu-latest
-    name: PHPUnit - PHP ${{ matrix.php_versions }} - SQLite
+    runs-on: windows-latest
+    name: PHPUnit - PHP ${{ matrix.php_versions }} - Windows
 
     env:
       TEST_DB: default
@@ -120,21 +188,9 @@ PHPUnit-ubuntu-SQLite:
       uses: shivammathur/setup-php@v2
       with:
         php-version: ${{ matrix.php_versions }}
-        extensions: mbstring, dom, fileinfo, gd, memcached, redis
+        extensions: mbstring, dom, fileinfo, gd, pdo, sqlite, pdo_sqlite
         coverage: xdebug
         tools: pecl, composer:v1
-
-    - uses: actions/setup-node@v2
-      with:
-        node-version: 10
-    
-    - name: Setup Redis-server
-      uses: supercharge/redis-github-action@1.1.0
-      with:
-        redis-version: 6
-    
-    - name: Setup Memcached
-      uses: niden/actions-memcached@v7
     
     - name: Copy .env
       run: php -r "copy('app/sprinkles.example.json', 'app/sprinkles.json');"
@@ -142,22 +198,16 @@ PHPUnit-ubuntu-SQLite:
     - name: Install Dependencies
       run: composer install --prefer-dist --no-progress --no-suggest
     
-    - name: Create SQLite Database
+    - name: Create Database
       run: |
         mkdir -p database
         touch database/database.sqlite
-    
-    - name: Bakery Debug
-      run: php bakery debug
-
-    - name: Migrate DB
-      run: php bakery migrate
-
-    # - name: Build Assets
-    #  run: php bakery build-assets
-
-    - name: Execute tests
-      run: php bakery test -c --coverage-format=clover
+        
+    - name: Execute build with SQLite Env
+      run: |
+        php bakery debug
+        php bakery migrate
+        php bakery test -c --coverage-format=clover
     
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v1
@@ -165,88 +215,38 @@ PHPUnit-ubuntu-SQLite:
         file: ./_meta/coverage/coverage.xml
         fail_ci_if_error: true
 
-PHPUnit-windows:
+  Asset-Build:
 
-  strategy:
-    fail-fast: false
-    matrix:
-      php_versions: ['7.1', '7.2', '7.3', '7.4']
+    strategy:
+      fail-fast: false
+      matrix:
+        php_versions: ['7.1', '7.2', '7.3', '7.4']
+        node_versions: ['10', '11', '12', '14'] 
+        os: [ubuntu-latest, windows-latest]
 
-  runs-on: windows-latest
-  name: PHPUnit - PHP ${{ matrix.php_versions }} - Windows
+    runs-on: ${{ matrix.os }}
+    name: Assets Build - PHP ${{ matrix.php_versions }} - Node ${{ matrix.node_versions }} - ${{ matrix.os }}
 
-  env:
-    TEST_DB: default
-    UF_MODE: debug
-    DB_DRIVER: sqlite
-    DB_NAME: database/database.sqlite
+    steps:
+    - uses: actions/checkout@v2
+    
+    - name: Setup PHP, with composer and extensions
+      uses: shivammathur/setup-php@v2
+      with:
+        php-version: ${{ matrix.php_versions }}
+        extensions: mbstring, dom, fileinfo, gd
+        coverage: xdebug
+        tools: pecl, composer:v1
 
-  steps:
-  - uses: actions/checkout@v2
-  
-  - name: Setup PHP, with composer and extensions
-    uses: shivammathur/setup-php@v2
-    with:
-      php-version: ${{ matrix.php_versions }}
-      extensions: mbstring, dom, fileinfo, gd, pdo, sqlite, pdo_sqlite
-      coverage: xdebug
-      tools: pecl, composer:v1
-  
-  - name: Copy .env
-    run: php -r "copy('app/sprinkles.example.json', 'app/sprinkles.json');"
-  
-  - name: Install Dependencies
-    run: composer install --prefer-dist --no-progress --no-suggest
-  
-  - name: Create Database
-    run: |
-      mkdir -p database
-      touch database/database.sqlite
-      
-  - name: Execute build with SQLite Env
-    run: |
-      php bakery debug
-      php bakery migrate
-      php bakery test -c --coverage-format=clover
-  
-  - name: Upload coverage to Codecov
-    uses: codecov/codecov-action@v1
-    with:
-      file: ./_meta/coverage/coverage.xml
-      fail_ci_if_error: true
-
-asset-build:
-
-  strategy:
-    fail-fast: false
-    matrix:
-      php_versions: ['7.1', '7.2', '7.3', '7.4']
-      node_versions: ['10', '11', '12', '14'] 
-      os: [ubuntu-latest, windows-latest]
-
-  runs-on: ${{ matrix.os }}
-  name: Assets Build - PHP ${{ matrix.php_versions }} - Node ${{ matrix.node_versions }} - ${{ matrix.os }}
-
-  steps:
-  - uses: actions/checkout@v2
-  
-  - name: Setup PHP, with composer and extensions
-    uses: shivammathur/setup-php@v2
-    with:
-      php-version: ${{ matrix.php_versions }}
-      extensions: mbstring, dom, fileinfo, gd
-      coverage: xdebug
-      tools: pecl, composer:v1
-
-  - uses: actions/setup-node@v2
-    with:
-      node-version: ${{ matrix.node_versions }}
-  
-  - name: Copy .env
-    run: php -r "copy('app/sprinkles.example.json', 'app/sprinkles.json');"
-  
-  - name: Install Dependencies
-    run: composer install --prefer-dist --no-progress --no-suggest
-  
-  - name: Execute build
-    run: php bakery build-assets
+    - uses: actions/setup-node@v2
+      with:
+        node-version: ${{ matrix.node_versions }}
+    
+    - name: Copy .env
+      run: php -r "copy('app/sprinkles.example.json', 'app/sprinkles.json');"
+    
+    - name: Install Dependencies
+      run: composer install --prefer-dist --no-progress --no-suggest
+    
+    - name: Execute build
+      run: php bakery build-assets
