--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -89,12 +89,12 @@ jobs:
       run: php bakery build-assets
 
     - name: Execute tests
-      run: php bakery test -c --coverage-format=clover
+      run: app/vendor/bin/phpunit --coverage-clover=coverage.xml
     
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v1
       with:
-        file: ./_meta/coverage/coverage.xml
+        file: ./coverage.xml
         fail_ci_if_error: true
 
   PHPUnit-SQLite:
@@ -157,12 +157,86 @@ jobs:
       #  run: php bakery build-assets
 
       - name: Execute tests
-        run: php bakery test -c --coverage-format=clover
+        run: app/vendor/bin/phpunit --coverage-clover=coverage.xml
       
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v1
         with:
-          file: ./_meta/coverage/coverage.xml
+          file: ./coverage.xml
+          fail_ci_if_error: true
+  
+  PHPUnit-Postgre:
+
+      strategy:
+        fail-fast: false
+        matrix:
+          php_versions: ['7.1', '7.2', '7.3', '7.4']
+
+      runs-on: ubuntu-latest
+      name: PHPUnit - PHP ${{ matrix.php_versions }} - PostgreSQL
+
+      env:
+        TEST_DB: default
+        UF_MODE: debug
+        DB_DRIVER: pgsql
+        DB_HOST: 127.0.0.1
+        DB_USER: userfrosting
+        DB_PASSWORD: password
+        DB_NAME: userfrosting
+        DB_PORT: 5432
+
+      steps:
+      - uses: actions/checkout@v2
+      
+      - name: Setup PHP, with composer and extensions
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: ${{ matrix.php_versions }}
+          extensions: mbstring, dom, fileinfo, gd, memcached, redis
+          coverage: xdebug
+          tools: pecl, composer:v1
+
+      - uses: actions/setup-node@v2
+        with:
+          node-version: 10
+      
+      - name: Setup Redis-server
+        uses: supercharge/redis-github-action@1.1.0
+        with:
+          redis-version: 6
+      
+      - name: Setup Memcached
+        uses: niden/actions-memcached@v7
+      
+      - name: Copy .env
+        run: php -r "copy('app/sprinkles.example.json', 'app/sprinkles.json');"
+      
+      - name: Install Dependencies
+        run: composer install --prefer-dist --no-progress --no-suggest
+      
+      - name: Setup PostgreSQL
+        uses: Harmon758/postgresql-action@v1.0.0
+        with:
+          postgresql db: 'userfrosting'
+          postgresql user: 'userfrosting'
+          postgresql password: 'password'
+      
+      - name: Bakery Debug
+        run: php bakery debug
+
+      - name: Migrate DB
+        run: php bakery migrate
+
+      - name: Build Assets
+        run: php bakery build-assets
+
+      - name: Execute tests
+        run: app/vendor/bin/phpunit --coverage-clover=coverage.xml
+      
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v1
+        with:
+          file: ./coverage.xml
           fail_ci_if_error: true
 
   PHPUnit-Windows:
@@ -207,12 +281,12 @@ jobs:
       run: |
         php bakery debug
         php bakery migrate
-        php bakery test -c --coverage-format=clover
+        app/vendor/bin/phpunit --coverage-clover=coverage.xml
     
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v1
       with:
-        file: ./_meta/coverage/coverage.xml
+        file: ./coverage.xml
         fail_ci_if_error: true
 
   Asset-Build:
