Updated Homestead config & doc (close #1134)

--- a/vagrant/bootstrap.yaml
+++ b/vagrant/bootstrap.yaml
@@ -18,8 +18,7 @@ folders:
 sites:
     - map: userfrosting.test
       to: /home/vagrant/userfrosting/public
+      php: "7.4"
     - map: phpmyadmin.test
       to: /usr/share/phpmyadmin
-
-databases:
-    - UserFrosting
+      php: "7.4"
