--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -42,7 +42,7 @@ jobs:
 
     - uses: actions/setup-node@v2
       with:
-        node-version: 10
+        node-version: 14
     
     - name: Setup Redis-server
       uses: supercharge/redis-github-action@1.1.0
@@ -126,7 +126,7 @@ jobs:
 
       - uses: actions/setup-node@v2
         with:
-          node-version: 10
+          node-version: 14
       
       - name: Setup Redis-server
         uses: supercharge/redis-github-action@1.1.0
@@ -205,7 +205,7 @@ jobs:
 
       - uses: actions/setup-node@v2
         with:
-          node-version: 10
+          node-version: 14
       
       - name: Setup Redis-server
         uses: supercharge/redis-github-action@1.1.0
@@ -268,7 +268,7 @@ jobs:
 
     - uses: actions/setup-node@v2
       with:
-        node-version: 10
+        node-version: 14
     
     - name: Copy .env
       run: php -r "copy('app/sprinkles.example.json', 'app/sprinkles.json');"
@@ -305,7 +305,7 @@ jobs:
       fail-fast: false
       matrix:
         php_versions: ['7.4']
-        node_versions: ['10', '11', '12', '14'] 
+        node_versions: ['12.17.0', '14', '15'] 
         os: [ubuntu-latest, windows-latest]
 
     runs-on: ${{ matrix.os }}
