--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -14,7 +14,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        php_versions: ['7.1', '7.2', '7.3', '7.4']
+        php_versions: ['7.2', '7.3', '7.4']
 
     runs-on: ubuntu-latest
     name: PHPUnit - PHP ${{ matrix.php_versions }} - MySQL
@@ -38,7 +38,7 @@ jobs:
         php-version: ${{ matrix.php_versions }}
         extensions: mbstring, dom, fileinfo, gd, memcached, redis, pdo_sqlite
         coverage: xdebug
-        tools: pecl, composer:v1
+        tools: pecl, composer
 
     - uses: actions/setup-node@v2
       with:
@@ -109,7 +109,7 @@ jobs:
       strategy:
         fail-fast: false
         matrix:
-          php_versions: ['7.1', '7.2', '7.3', '7.4']
+          php_versions: ['7.2', '7.3', '7.4']
 
       runs-on: ubuntu-latest
       name: PHPUnit - PHP ${{ matrix.php_versions }} - SQLite
@@ -129,7 +129,7 @@ jobs:
           php-version: ${{ matrix.php_versions }}
           extensions: mbstring, dom, fileinfo, gd, memcached, redis, pdo_sqlite
           coverage: xdebug
-          tools: pecl, composer:v1
+          tools: pecl, composer
 
       - uses: actions/setup-node@v2
         with:
@@ -178,7 +178,7 @@ jobs:
       strategy:
         fail-fast: false
         matrix:
-          php_versions: ['7.1', '7.2', '7.3', '7.4']
+          php_versions: ['7.2', '7.3', '7.4']
 
       runs-on: ubuntu-latest
       name: PHPUnit - PHP ${{ matrix.php_versions }} - PostgreSQL
@@ -202,7 +202,7 @@ jobs:
           php-version: ${{ matrix.php_versions }}
           extensions: mbstring, dom, fileinfo, gd, memcached, redis, pdo_sqlite, pdo_pgsql
           coverage: xdebug
-          tools: pecl, composer:v1
+          tools: pecl, composer
       
       - name: Setup PostgreSQL
         uses: harmon758/postgresql-action@v1
@@ -253,7 +253,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        php_versions: ['7.1', '7.2', '7.3', '7.4']
+        php_versions: ['7.2', '7.3', '7.4']
 
     runs-on: windows-latest
     name: PHPUnit - PHP ${{ matrix.php_versions }} - Windows
@@ -273,7 +273,7 @@ jobs:
         php-version: ${{ matrix.php_versions }}
         extensions: mbstring, dom, fileinfo, gd, pdo, sqlite, pdo_sqlite
         coverage: xdebug
-        tools: pecl, composer:v1
+        tools: pecl, composer
 
     - uses: actions/setup-node@v2
       with:
@@ -329,7 +329,7 @@ jobs:
         php-version: ${{ matrix.php_versions }}
         extensions: mbstring, dom, fileinfo, gd
         coverage: xdebug
-        tools: pecl, composer:v1
+        tools: pecl, composer
 
     - uses: actions/setup-node@v2
       with:
