--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -357,9 +357,9 @@ jobs:
           node-version: 14.x
 
       - name: Install Dependencies
-        working-directory: ./build
+        working-directory: build
         run: npm i
 
       - name: Type Validation
-        working-directory: ./build
-        run: node_modules/bin/tsc -p ./tsconfig.json
+        working-directory: build
+        run: node_modules/.bin/tsc -p ./tsconfig.json
