--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -14,7 +14,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        php_versions: ['7.2', '7.3', '7.4']
+        php_versions: ['7.4', '8.0']
 
     runs-on: ubuntu-latest
     name: PHPUnit - PHP ${{ matrix.php_versions }} - MySQL
@@ -55,17 +55,7 @@ jobs:
     - name: Shutdown Ubuntu MySQL (SUDO)
       run: sudo service mysql stop # Shutdown the Default MySQL, "sudo" is necessary, please not remove it
     
-    - name: Set up MySQL (PHP <= 7.3 -> MySQL 5)
-      if: ${{ matrix.php_versions != 7.4 }}
-      uses: mirromutth/mysql-action@v1.1
-      with:
-        mysql version: '5'
-        mysql database: 'userfrosting'
-        mysql user: 'userfrosting'
-        mysql password: 'password'
-
-    - name: Set up MySQL (PHP >= 7.4 -> MySQL 8)
-      if: ${{ matrix.php_versions == 7.4 }}
+    - name: Set up MySQL 8
       uses: mirromutth/mysql-action@v1.1
       with:
         mysql version: '8'
@@ -109,7 +99,7 @@ jobs:
       strategy:
         fail-fast: false
         matrix:
-          php_versions: ['7.2', '7.3', '7.4']
+          php_versions: ['7.4', '8.0']
 
       runs-on: ubuntu-latest
       name: PHPUnit - PHP ${{ matrix.php_versions }} - SQLite
@@ -178,7 +168,7 @@ jobs:
       strategy:
         fail-fast: false
         matrix:
-          php_versions: ['7.2', '7.3', '7.4']
+          php_versions: ['7.4', '8.0']
 
       runs-on: ubuntu-latest
       name: PHPUnit - PHP ${{ matrix.php_versions }} - PostgreSQL
@@ -253,7 +243,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        php_versions: ['7.2', '7.3', '7.4']
+          php_versions: ['7.4', '8.0']
 
     runs-on: windows-latest
     name: PHPUnit - PHP ${{ matrix.php_versions }} - Windows
