--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,7 @@
         }
     ],
     "require": {
-        "php": ">=7.4",
+        "php": "^7.4 | ^8.0",
         "ext-gd": "*",
         "composer/installers": "^1.4.0",
         "userfrosting/framework": "dev-master",
